force-app/main/default/objects/BLN_TriggerSMS__e/BLN_TriggerSMS__e.object-meta.xml
<CustomObject>
    <description>FOUK-7703, This Platform Event is created for configuring the SMS Framework</description>
    <label>Trigger SMS</label>
    <pluralLabel>Trigger SMS</pluralLabel>
</CustomObject>