force-app/main/default/objects/BLN_TriggerSMS__e/fields/BLN_ContextRecordID__c.field-meta.xml
<CustomField>
    <fullName>BLN_ContextRecordID__c</fullName>
    <description>FOUK-7703, A record that can provide context for merge fields. For the message to be sent successfully, all merge fields must be filled.</description>
    <label>Context Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>