force-app/main/default/objects/BLN_TriggerSMS__e/fields/BLN_MessagingChannelUniqueName__c.field-meta.xml
<CustomField>
    <fullName>BLN_MessagingChannelUniqueName__c</fullName>
    <description>FOUK-7703, The developer name associated with the messaging channel.</description>
    <label>Messaging Channel Unique Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>