force-app/main/default/objects/BLN_TriggerSMS__e/fields/BLN_MessagingTemplateUniqueName__c.field-meta.xml
<CustomField>
    <fullName>BLN_MessagingTemplateUniqueName__c</fullName>
    <description>FOUK-7703, The developer name associated with the messaging template.</description>
    <label>Messaging Template Unique Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>