force-app/main/default/objects/BLN_TriggerSMS__e/fields/BLN_RecipientPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>BLN_RecipientPhoneNumber__c</fullName>
    <description>FOUK-7703, The destination phone number that the message is sent to. Use if the Recipient Record ID lists an object other than MessagingEndUser, or if the Recipient Record ID isn&apos;t completed.</description>
    <label>Recipient Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>