force-app/main/default/objects/BLN_TriggerSMS__e/fields/BLN_RecipientRecordID__c.field-meta.xml
<CustomField>
    <fullName>BLN_RecipientRecordID__c</fullName>
    <description>FOUK-7703, ID of a MessagingEndUser or a record with a phone number, such as a contact record.</description>
    <label>Recipient Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>