force-app/main/default/objects/BLN_TriggerSMS__e/fields/BLN_TriggeredOutboundType__c.field-meta.xml
<CustomField>
    <fullName>BLN_TriggeredOutboundType__c</fullName>
    <description>FOUK-7703, The type of message. Enter either Standard or Broadcast.</description>
    <label>Triggered Outbound Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>